# c-lsp

./: .gitignore  README.md  pyproject.toml
notes/: lsp-tree-sitter.md  notes.md
src/: main.py
